static/src/scss/_content.scss
section.content {
  font-size: 1.25rem;
  padding-top: 0.5rem;

  h2,
  h3,
  h4,
  h5,
  h6 {
    .heading-anchor {
      margin-right: 0.5rem;
    }
  }
}

.content-details {
  .tag {
    font-size: inherit;
  }

  .control {
    font-size: inherit;

    &:not(:last-child) {
      margin-right: 1rem !important;
    }

    &.page-tags {
      font-family: $family-code;

      .tag:not(:first-child) {
        padding-right: 0;
      }
    }
  }
}

.container {
  @include until($container-max-width) {
    max-width: calc(99% - ($column-gap * 2));
  }
}

